[workspace]
members = [
    "imhamt",
    "chain-ser",
    "chain-core",
    "chain-addr",
    "chain-time",
    "chain-crypto",
    "chain-network",
    "chain-storage",
    "chain-storage-sqlite-old",
    "chain-impl-mockchain",
    "cardano-legacy-address",
    "sparse-array",
    "typed-bytes",
    "btree",
]
