[workspace]
members = [
    "imhamt",
    "chain-ser",
    "chain-core",
    "chain-addr",
    "chain-time",
    "chain-crypto",
    "chain-storage",
    "chain-storage-sqlite-old",
    "chain-impl-mockchain",
    "chain-block",
    "cardano-legacy-address",
    "network-core",
    "network-grpc",
    "sparse-array",
    "typed-bytes",
    "btree",
]
