[workspace]
members = [
    "imhamt",
    "chain-ser",
    "chain-core",
    "chain-addr",
    "chain-time",
    "chain-crypto",
    "chain-network",
    "chain-storage",
    "chain-generators",
    "chain-test-utils",
    "chain-impl-mockchain",
    "cardano-legacy-address",
    "sparse-array",
    "typed-bytes",
    "btree",
]
