[package]
name = "chain-generators"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-crypto = { path = "../chain-crypto" }
chain-test-utils = { path = "../chain-test-utils" }
smoke = "0.1.0"
rand = "0.7.3"